//
// Copyright 2016, TeamDev Ltd. All rights reserved.
//
// Redistribution and use in source and/or binary forms, with or without
// modification, must retain the above copyright notice and the following
// disclaimer.
//
// THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
// "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
// LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
// A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
// OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
// SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
// LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
// DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
// THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
// (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
// OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
//
syntax = "proto3";

package spine_examples.importado;

option (type_url_prefix) = "type.spine3.org";
option java_package="org.spine3.examples.importado";
option java_outer_classname = "TaskProto";
option java_multiple_files = true;
option java_generate_equals_and_hash = true;

import "spine/annotations.proto";
import "spine/validate.proto";
import "spine/users/user_id.proto";

message TaskId {
    uint32 number = 1;
}

message Task {
    // A task must have a non-default ID.
    TaskId id = 1 [(required).value = true];

    // There cannot be a task without a name.
    string name = 2 [(required).value = true];

    string description = 3;

    enum Status {
        // Reserved for errors.
        UNKNOWN = 0;
        // The task is not assigned.
        NOT_ASSIGNED = 1;
        // The task is assigned to a person.
        ASSIGNED = 2;
        // The assignee is currently working on the task.
        IN_PROGRESS = 3;
        // Some work was done on the task, but it's not complete.
        STOPPED = 4;
        // The task is done.
        DONE = 5;
    }

    Status status = 4;
    spine.users.UserId assignee = 5;
}
